Attempt to avoid spotbugs-maven-plugin error.